--- a/exercicios/react/browser_gamer/src/screens/subscribe/styles.css
+++ b/exercicios/react/browser_gamer/src/screens/subscribe/styles.css
@@ -1,5 +1,5 @@
 
-.subscribe-container {
+.Subscribe-container {
     background: #111;
     height: 100%;
     width: 100%;
@@ -9,7 +9,7 @@
     align-items: center;
   }
   
-  .form-group {
+  .subscribe-group {
     display: flex;
     flex-direction: column;
     margin: 10px 0;
