--- a/exercicios/react/browser_gamer/src/components/card/styles.css
+++ b/exercicios/react/browser_gamer/src/components/card/styles.css
@@ -10,6 +10,14 @@
     box-shadow: 0px 10px 8px #999;
 }
 
+.LikeButton{
+    display: flex;
+    align-items: flex-end;
+    justify-content: end;
+    margin-right: 20px;
+    padding: 0 10px 10px 0
+}
+
 .cardImg{
     width: 100%;
     /* height:  */
