--- a/exercicios/react/browser_gamer/src/components/header/styles.css
+++ b/exercicios/react/browser_gamer/src/components/header/styles.css
@@ -61,7 +61,7 @@ a:visited {
     color: white
   }
 
-li, button{
+.header_li, .button_link{
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 1rem;
@@ -70,9 +70,9 @@ li, button{
 
 }
 
-button{
+.button_link{
     padding: 9px 25px;
-    background-color: rgba(0,136,169,1);
+    background-color: rgb(4, 169, 13);
     color: white;
     border:none;
     border-radius: 50px;
@@ -80,9 +80,10 @@ button{
     transition: all 0.3s ease 0s;
 }
 
-button:hover{
+.button_link:hover{
     background-color: rgba(0,136,169,0.8);
-}
+    color:black;
+  }
 
 ------------------------
 .hero {
